# mcp-fileop

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STREAMING.md  config.docker.json  config.json  docker-compose.yml  mcp_server_design.md
.github/: copilot-instructions.md  vscode-mcp-integration.md
src/: FileOpController.cpp  FileOpController.hpp  LineUtils.cpp  LineUtils.hpp  MemorySegment.cpp  MemorySegment.hpp  SSEBroadcaster.cpp  SSEBroadcaster.hpp  SegmentRegistry.cpp  SegmentRegistry.hpp  TaskflowManager.cpp  TaskflowManager.hpp  main.cpp  mcp_stdio.cpp  mcp_stream.cpp
tests/: CMakeLists.txt  test_fileop_controller.cpp  test_line_utils.cpp  test_line_utils_fuzz.cpp  test_read_mixed_formats.cpp  test_segment_registry.cpp  test_streaming_sse_progress.cpp
